# foundation

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Cargo.toml  INSTALL.md  README.md  pyproject.toml
.github/workflows/: ci.yml
containers/foundation/: foundation.def
docs/: conf.py  index.rst  requirements.txt
docs/source/: api.rst  conf.py  index.rst
python/foundation/: tools.py
python/foundation/scripts/: logging.conf  myapp.py
src/: lib.rs
tests/: conftest.py  example_test.py
