# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "foundation"
version = "0.0.1"
description = "Foundation directory with basic setup"
authors = ["Michael J. Wilson"]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.9.18"
dependencies = [
    "numpy",
    "furo"="^2024.1.29",
    "sphinx"="7.1.2",
    "sphinx-rtd-theme"="1.3.0rc1",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.maturin]
python-source = "python"
module-name = "foundation.core"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra -q", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = [
    "tests",
    "integration",
]
