[build-system]
requires = ["setuptools ~= 58.0", "cython ~= 0.29.0"]
build-backend = "maturin"

[project]
name = "foundation"
version = "0.0.1"
description = "Foundation directory with basic setup"
authors = ["Michael J. Wilson"]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.9.18"
repository = "https://github.com/michaelJwilson/foundation"
dependencies = [
  "alabaster==0.7.16",
  "argcomplete==3.2.2",
  "Babel==2.14.0",
  "beautifulsoup4==4.12.3",
  "certifi==2023.11.17",
  "cfgv==3.4.0",
  "charset-normalizer==3.3.2",
  "click==8.1.7",
  "distlib==0.3.8",
  "docutils==0.20.1",
  "exceptiongroup==1.2.0",
  "filelock==3.13.1",
  "furo==2024.1.29",
  "identify==2.5.33",
  "idna==3.6",
  "imagesize==1.4.1",
  "iniconfig==2.0.0",
  "Jinja2==3.1.3",
  "line-profiler==4.1.2",
  "MarkupSafe==2.1.4",
  "maturin==1.4.0",
  "nodeenv==1.8.0",
  "packaging==23.2",
  "pipx==1.4.3",
  "platformdirs==4.2.0",
  "pluggy==1.4.0",
  "pre-commit==3.6.0",
  "Pygments==2.17.2",
  "pytest==8.0.0",
  "PyYAML==6.0.1",
  "requests==2.31.0",
  "ruff==0.1.15",
  "snowballstemmer==2.2.0",
  "soupsieve==2.5",
  "Sphinx==7.2.6",
  "sphinx-basic-ng==1.0.0b2",
  "sphinxcontrib-applehelp==1.0.8",
  "sphinxcontrib-devhelp==1.0.6",
  "sphinxcontrib-htmlhelp==2.0.5",
  "sphinxcontrib-jsmath==1.0.1",
  "sphinxcontrib-qthelp==1.0.7",
  "sphinxcontrib-serializinghtml==1.1.10",
  "tomli==2.0.1",
  "urllib3==2.2.0",
  "userpath==1.9.1",
  "virtualenv==20.25.0",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.maturin]
python-source = "python"
module-name = "foundation.core"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra -q", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = [
    "tests",
    "integration",
]

[tool.mypy]
files = "src"
python_version = "3.8"
warn_unused_configs = true
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true

[tool.ruff.lint]
extend-select = [
  "B",           # flake8-bugbear
  "I",           # isort
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "EM",          # flake8-errmsg
  "ICN",         # flake8-import-conventions
  "ISC",         # flake8-implicit-str-concat
  "G",           # flake8-logging-format
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "PTH",         # flake8-use-pathlib
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "T20",         # flake8-print
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
  "EXE",         # flake8-executable
  "NPY",         # NumPy specific rules
  "PD",          # pandas-vet
]
extend-ignore = [
  "PLR09",    # Too many <...>
  "ISC001",   # Conflicts with formatter
]
unfixable = [
  "T20",  # Removes print statements
  "F841", # Removes unused variables
]
isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
